Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24916

Qt Designer: QDesignerContainerExtension: page title mechanism is broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.4.0
    • 4.8.0, 5.1.0
    • Tools: Designer
    • None
    • windows 7 - msvc8.0-10.0
    • ae26f834808c54265eadfc1cb1ec09f9c344a5a8 (qttools, 5.4 branch, 22.9.2014, 5.4)

    Description

      Pages added within designer are not correctly rendered.

      Steps to reproduce:

      • add MultiPageWidget in your project with designer
      • change page title
      • compile and start your application
      • the page title is lost, label is defaulting to "Page 1"

      Since the aim of this example is to show how a container widget works, it leaves developer without any clue on how to implement page settings correctly.

      After inspection of the moc, the title is saved in the windowTitle property.
      Pages are inserted in the setupUI() call, but at that point the windowTitle has not yet been set. Hence the title is lost.

      Attachments

        1. demo.png
          24 kB
          Julien Maille
        For Gerrit Dashboard: QTBUG-24916
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            julienmaille Julien Maille
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes