Qt Designer QDesignerContainerExtension example: Fix page title.

Tie the setting of the combo title to QQWidget::windowTitleChanged().

The call to retranslateUi() happens after adding the pages; so
the titles are lost in uic-generated code.

Change-Id: Ia88dd694a7ab5fe1bd62a849feeb7768a2ba6f16
Task-number: QTBUG-24916
Reviewed-by: Jarek Kobus <jaroslaw.kobus@digia.com>